# qa-ftopsis

./: .gitignore  README.md  appendix_math_formulation_jira_qa_ftopsis.md  pyproject.toml
configs/: default.yaml  german42.yaml  german42_robust.yaml  jira_kafka_real.yaml  jira_kafka_real_combo.yaml  jira_kafka_real_combo_tail.yaml  jira_kafka_real_combo_tailsim.yaml  jira_public.yaml  jira_public_smoke.yaml
qa_ftopsis/: __init__.py  baselines.py  cli.py  config.py  data.py  delay_models.py  environment.py  experiment.py  features.py  fuzzy.py  jira_api.py  jira_benchmark.py  jira_ingest.py  models.py  paper_assets.py  policies.py  reporting.py  service.py  sim.py  skill_features.py  types.py
sample_data/jira_public_smoke/: jira_history.csv  jira_issues.csv
tests/: conftest.py  test_data.py  test_fuzzy.py  test_integration.py  test_jira_pipeline.py  test_sim.py  test_skill_features.py
